--- a/main.html
+++ b/main.html
@@ -64,15 +64,15 @@
           <li class="nav-item"><a class="nav-link" href="movies.html">الأفلام</a></li>
           <li class="nav-item"><a class="nav-link" href="series.html">المسلسلات</a></li>
           <li class="nav-item"><a class="nav-link" href="favorits.html">المفضلة</a></li>
-          <li class="nav-item"><a class="nav-link" href="login.html">تسجيل الدخول</a></li>
-          <li class="nav-item"><a class="nav-link" href="signup.html">إنشاء حساب</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.php">تسجيل الدخول</a></li>
+          <li class="nav-item"><a class="nav-link" href="signup.php">إنشاء حساب</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
   <!-- Image Header -->
-  <img src="cinema-background.jpg" alt="صورة سينما" class="header-image">
+  <img src="images/cinema-background.jpg" alt="صورة سينما" class="header-image">
 
   <!-- Search Section -->
   <div class="search-section">
