--- a/movies.html
+++ b/movies.html
@@ -63,7 +63,7 @@
     <!-- بطاقة الفيلم 1 -->
     <div class="col">
       <div class="movie-card">
-        <img src="5843916117540719087_109.jpg" alt="فيلم 1">
+        <img src="images/5843916117540719087_109.jpg" alt="فيلم 1">
         <div class="card-body">
           <h5 class="card-title">فيلم 1</h5>
           <p class="card-text">الوصف هنا</p>
@@ -74,7 +74,7 @@
     <!-- بطاقة الفيلم 2 -->
     <div class="col">
       <div class="movie-card">
-        <img src="5843916117540719088_109.jpg" alt="فيلم 2">
+        <img src="images/5843916117540719088_109.jpg" alt="فيلم 2">
         <div class="card-body">
           <h5 class="card-title">فيلم 2</h5>
           <p class="card-text">الوصف هنا</p>
@@ -85,7 +85,7 @@
     <!-- بطاقة الفيلم 3 -->
     <div class="col">
       <div class="movie-card">
-        <img src="5843916117540719089_109.jpg" alt="فيلم 3">
+        <img src="images/5843916117540719089_109.jpg" alt="فيلم 3">
         <div class="card-body">
           <h5 class="card-title">فيلم 3</h5>
           <p class="card-text">الوصف هنا</p>
@@ -96,7 +96,7 @@
     <!-- بطاقة الفيلم 4 -->
     <div class="col">
       <div class="movie-card">
-        <img src="5843916117540719090_109.jpg" alt="فيلم 4">
+        <img src="images/5843916117540719090_109.jpg" alt="فيلم 4">
         <div class="card-body">
           <h5 class="card-title">فيلم 4</h5>
           <p class="card-text">الوصف هنا</p>
@@ -107,7 +107,7 @@
     <!-- بطاقة الفيلم 5 -->
     <div class="col">
       <div class="movie-card">
-        <img src="5843916117540719091_109.jpg" alt="فيلم 5">
+        <img src="images/5843916117540719091_109.jpg" alt="فيلم 5">
         <div class="card-body">
           <h5 class="card-title">فيلم 5</h5>
           <p class="card-text">الوصف هنا</p>
@@ -118,7 +118,7 @@
     <!-- بطاقة الفيلم 6 -->
     <div class="col">
       <div class="movie-card">
-        <img src="5843916117540719092_109.jpg" alt="فيلم 6">
+        <img src="images/5843916117540719092_109.jpg" alt="فيلم 6">
         <div class="card-body">
           <h5 class="card-title">فيلم 6</h5>
           <p class="card-text">الوصف هنا</p>
@@ -129,7 +129,7 @@
     <!-- بطاقة الفيلم 7 -->
     <div class="col">
       <div class="movie-card">
-        <img src="5843916117540719093_109.jpg" alt="فيلم 7">
+        <img src="images/5843916117540719093_109.jpg" alt="فيلم 7">
         <div class="card-body">
           <h5 class="card-title">فيلم 7</h5>
           <p class="card-text">الوصف هنا</p>
@@ -140,7 +140,7 @@
     <!-- بطاقة الفيلم 8 -->
     <div class="col">
       <div class="movie-card">
-        <img src="5843916117540719094_109.jpg" alt="فيلم 8">
+        <img src="images/5843916117540719094_109.jpg" alt="فيلم 8">
         <div class="card-body">
           <h5 class="card-title">فيلم 8</h5>
           <p class="card-text">الوصف هنا</p>
@@ -151,7 +151,7 @@
     <!-- بطاقة الفيلم 9 -->
     <div class="col">
       <div class="movie-card">
-        <img src="5843916117540719096_109.jpg" alt="فيلم 9">
+        <img src="images/5843916117540719096_109.jpg" alt="فيلم 9">
         <div class="card-body">
           <h5 class="card-title">فيلم 9</h5>
           <p class="card-text">الوصف هنا</p>
@@ -162,7 +162,7 @@
     <!-- بطاقة الفيلم 10 -->
     <div class="col">
       <div class="movie-card">
-        <img src="5843916117540719107_109.jpg" alt="فيلم 10">
+        <img src="images/5843916117540719107_109.jpg" alt="فيلم 10">
         <div class="card-body">
           <h5 class="card-title">فيلم 10</h5>
           <p class="card-text">الوصف هنا</p>
@@ -173,7 +173,7 @@
     <!-- بطاقة الفيلم 11 -->
     <div class="col">
       <div class="movie-card">
-        <img src="5843916117540719106_109.jpg" alt="فيلم 11">
+        <img src="images/5843916117540719106_109.jpg" alt="فيلم 11">
         <div class="card-body">
           <h5 class="card-title">فيلم 11</h5>
           <p class="card-text">الوصف هنا</p>
@@ -184,7 +184,7 @@
     <!-- بطاقة الفيلم 12 -->
     <div class="col">
       <div class="movie-card">
-        <img src="5843916117540719102_109.jpg" alt="فيلم 12">
+        <img src="images/5843916117540719102_109.jpg" alt="فيلم 12">
         <div class="card-body">
           <h5 class="card-title">فيلم 12</h5>
           <p class="card-text">الوصف هنا</p>
@@ -195,7 +195,7 @@
     <!-- بطاقة الفيلم 13 -->
     <div class="col">
       <div class="movie-card">
-        <img src="5843916117540719099_109.jpg" alt="فيلم 13">
+        <img src="images/5843916117540719099_109.jpg" alt="فيلم 13">
         <div class="card-body">
           <h5 class="card-title">فيلم 13</h5>
           <p class="card-text">الوصف هنا</p>
@@ -206,7 +206,7 @@
     <!-- بطاقة الفيلم 14 -->
     <div class="col">
       <div class="movie-card">
-        <img src="5843916117540719104_109.jpg" alt="فيلم 14">
+        <img src="images/5843916117540719104_109.jpg" alt="فيلم 14">
         <div class="card-body">
           <h5 class="card-title">فيلم 14</h5>
           <p class="card-text">الوصف هنا</p>
@@ -217,7 +217,7 @@
     <!-- بطاقة الفيلم 15 -->
     <div class="col">
       <div class="movie-card">
-        <img src="5843916117540719101_109.jpg" alt="فيلم 15">
+        <img src="images/5843916117540719101_109.jpg" alt="فيلم 15">
         <div class="card-body">
           <h5 class="card-title">فيلم 15</h5>
           <p class="card-text">الوصف هنا</p>
@@ -228,7 +228,7 @@
     <!-- بطاقة الفيلم 16 -->
     <div class="col">
       <div class="movie-card">
-        <img src="5843916117540719100_109.jpg" alt="فيلم 16">
+        <img src="images/5843916117540719100_109.jpg" alt="فيلم 16">
         <div class="card-body">
           <h5 class="card-title">فيلم 16</h5>
           <p class="card-text">الوصف هنا</p>
@@ -236,10 +236,10 @@
         </div>
       </div>
     </div>
-     <!-- بطاقة الفيلم 17 -->
+    <!-- بطاقة الفيلم 17 -->
     <div class="col">
       <div class="movie-card">
-        <img src="5843916117540719105_109.jpg" alt="فيلم 16">
+        <img src="images/5843916117540719105_109.jpg" alt="فيلم 16">
         <div class="card-body">
           <h5 class="card-title">فيلم 16</h5>
           <p class="card-text">الوصف هنا</p>
