--- a/movies.html
+++ b/movies.html
@@ -63,192 +63,233 @@
     <!-- بطاقة الفيلم 1 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/5843916117540719087_109.jpg" alt="فيلم 1">
+        <img src="photo_1_2025-05-13_15-52-07.jpg" alt="فيلم 1">
         <div class="card-body">
-          <h5 class="card-title">فيلم 1</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <h5 class="card-title">LUTHER:the fallen sun</h5>
+          <p class="card-text">A serial killer terrorizes London while disgraced detective John Luther sits behind bars. Haunted by his failure to capture the cyber psychopath who now taunts him, Luther decides to break out of prison to finish the job by any means necessary.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐ 7/10</p>
+           <p class="timing">time:129M</p>
+            <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة الفيلم 2 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/5843916117540719088_109.jpg" alt="فيلم 2">
+        <img src="photo_2_2025-05-13_15-52-07.jpg"   alt="فيلم 2">
         <div class="card-body">
-          <h5 class="card-title">فيلم 2</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title">The Dark Tower</h5>
+          <p class="card-text">Eleven-year-old Jake meets the last Gunslinger in Mid-World as he pursues the Man in Black, seeking revenge for his father's murder and to stop him from destroying the Dark Tower.</p>
+          <p class="rating">⭐⭐⭐⭐⭐ 5/10</p>
+          <p class="timing">time:95 M</p>
+           <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة الفيلم 3 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/5843916117540719089_109.jpg" alt="فيلم 3">
+        <img src="photo_3_2025-05-13_15-52-07.jpg" alt="فيلم 3">
         <div class="card-body">
-          <h5 class="card-title">فيلم 3</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <h5 class="card-title">The Pianist</h5>
+          <p class="card-text">During the WWII, acclaimed Polish musician Wladyslaw faces various struggles as he loses contact with his family. As the situation worsens, he hides in the ruins of Warsaw in order to survive.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐ 8/10</p>
+          <p class="timing">time:150 M</p>
+           <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة الفيلم 4 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/5843916117540719090_109.jpg" alt="فيلم 4">
+        <img src="photo_4_2025-05-13_15-52-07.jpg"   alt="فيلم 4">
         <div class="card-body">
-          <h5 class="card-title">فيلم 4</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title">Nowhere</h5>
+          <p class="card-text">Fleeing a totalitarian country, pregnant Mia must fight for her life when a violent storm knocks the container in which she has been hiding overboard. Trapped, Mia gives birth and is forced to survive to save her baby.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐⭐ 9/10</p>
+          <p class="timing">time:109 M</p>
+           <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة الفيلم 5 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/5843916117540719091_109.jpg" alt="فيلم 5">
+        <img src="photo_5_2025-05-13_15-52-07.jpg" alt="فيلم 5">
         <div class="card-body">
-          <h5 class="card-title">فيلم 5</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <h5 class="card-title">Shutter Island</h5>
+          <p class="card-text">Teddy Daniels and Chuck Aule, two US marshals, are sent to an asylum on a remote island in order to investigate the disappearance of a patient, where Teddy uncovers a shocking truth about the place.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐⭐ 9/10</p>
+          <p class="timing">time:138 M</p>
+           <button class="favorite-btn">♥</button>
         </div>
-      </div>300x250
+      </div>
     </div>
     <!-- بطاقة الفيلم 6 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/5843916117540719092_109.jpg" alt="فيلم 6">
+        <img src="photo_6_2025-05-13_15-52-07.jpg" alt="فيلم 6">
         <div class="card-body">
-          <h5 class="card-title">فيلم 6</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title">Avengers: Infinity War</h5>
+          <p class="card-text">As Thanos sets about his quest for finding the infinity stones and carrying out his twisted scheme, the Avengers join forces with their allies to stop him from causing chaos and destruction.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐8/10</p>
+          <p class="timing">time:149 M</p>
+           <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة الفيلم 7 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/5843916117540719093_109.jpg" alt="فيلم 7">
+        <img src="photo_7_2025-05-13_15-52-07.jpg" alt="فيلم 7">
         <div class="card-body">
-          <h5 class="card-title">فيلم 7</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <h5 class="card-title">Plane</h5>
+          <p class="card-text">Pilot Brodie Torrance saves passengers from a lightning strike by making a risky landing on a war-torn island -- only to find that surviving the landing was just the beginning. When dangerous rebels take most of the passengers hostage, the only person Torrance can count on for help is Louis Gaspare, an accused murderer who was being transported by the FBI.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐ 6/10</p>
+          <p class="timing">time:107 M</p>
+           <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة الفيلم 8 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/5843916117540719094_109.jpg" alt="فيلم 8">
+        <img src="photo_8_2025-05-13_15-52-07.jpg" alt="فيلم 8">
         <div class="card-body">
-          <h5 class="card-title">فيلم 8</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title">Spider-Man: No Way Home</h5>
+          <p class="card-text">Spider-Man seeks the help of Doctor Strange to forget his exposed secret identity as Peter Parker. However, Strange's spell goes horribly wrong, leading to unwanted guests entering their universe.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐ 8/10</p>
+          <p class="timing">time:148 M</p>
+           <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة الفيلم 9 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/5843916117540719096_109.jpg" alt="فيلم 9">
+        <img src="photo_9_2025-05-13_15-52-07.jpg" alt="فيلم 9">
         <div class="card-body">
-          <h5 class="card-title">فيلم 9</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <h5 class="card-title">Inception</h5>
+          <p class="card-text">Cobb steals information from his targets by entering their dreams. He is wanted for his alleged role in his wife's murder and his only chance at redemption is to perform a nearly impossible task.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐⭐ 9/10</p>
+          <p class="timing">time:148 M</p>
+           <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة الفيلم 10 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/5843916117540719107_109.jpg" alt="فيلم 10">
+        <img src="photo_10_2025-05-13_15-52-07.jpg" alt="فيلم 10">
         <div class="card-body">
-          <h5 class="card-title">فيلم 10</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title">Million Dollar Baby</h5>
+          <p class="card-text">Frankie, an ill-tempered old coach, reluctantly agrees to train aspiring boxer Maggie. Impressed with her determination and talent, he helps her become the best and the two soon form a close bond.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐ 8/10</p>
+          <p class="timing">time:132 M</p>
+           <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة الفيلم 11 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/5843916117540719106_109.jpg" alt="فيلم 11">
+        <img src="photo_11_2025-05-13_15-52-07.jpg" alt="فيلم 11">
         <div class="card-body">
-          <h5 class="card-title">فيلم 11</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <h5 class="card-title">Aquaman</h5>
+          <p class="card-text">Half-human, half-Atlantean Arthur Curry must take his rightful place as the king of Atlantis and prevent a large-scale conflict from breaking out between the underwater kingdom and the surface world.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐ 7/10</p>
+          <p class="timing">time:143 M</p>
+           <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة الفيلم 12 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/5843916117540719102_109.jpg" alt="فيلم 12">
+        <img src="photo_12_2025-05-13_15-52-07.jpg" alt="فيلم 12">
         <div class="card-body">
-          <h5 class="card-title">فيلم 12</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title">The Matrix</h5>
+          <p class="card-text">Neo, a computer programmer and hacker, has always questioned the reality of the world around him. His suspicions are confirmed when Morpheus, a rebel leader, contacts him and reveals the truth to him.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐⭐ 9/10</p>
+          <p class="timing">time:136 M</p>
+           <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة الفيلم 13 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/5843916117540719099_109.jpg" alt="فيلم 13">
+        <img src="photo_13_2025-05-13_15-52-07.jpg" alt="فيلم 13">
         <div class="card-body">
-          <h5 class="card-title">فيلم 13</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <h5 class="card-title">Fury</h5>
+          <p class="card-text">Wardaddy, along with his crew of five members, embarks on a mission that puts many lives in danger. The crew members realise that the odds are against them, but still decide to attack the Nazi army.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐⭐ 9/10</p>
+          <p class="timing">time:134 M</p>
+           <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة الفيلم 14 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/5843916117540719104_109.jpg" alt="فيلم 14">
+        <img src="photo_14_2025-05-13_15-52-07.jpg" alt="فيلم 14">
         <div class="card-body">
-          <h5 class="card-title">فيلم 14</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title"> The Godfather</h5>
+          <p class="card-text">Don Vito Corleone, head of a mafia family, decides to hand over his empire to his youngest son, Michael. However, his decision unintentionally puts the lives of his loved ones in grave danger.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐⭐ 9/10</p>
+          <p class="timing">time:155 M</p>
+           <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة الفيلم 15 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/5843916117540719101_109.jpg" alt="فيلم 15">
+        <img src="photo_15_2025-05-13_15-52-07.jpg" alt="فيلم 15">
         <div class="card-body">
-          <h5 class="card-title">فيلم 15</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <h5 class="card-title">Avengers: Endgame</h5>
+          <p class="card-text">After Thanos, an intergalactic warlord, disintegrates half of the universe, the Avengers must reunite and assemble again to reinvigorate their trounced allies and restore balance.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐⭐ 9/10</p>
+          <p class="timing">time:181 M</p>
+           <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة الفيلم 16 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/5843916117540719100_109.jpg" alt="فيلم 16">
+        <img src="photo_16_2025-05-13_15-52-07.jpg" alt="فيلم 16">
         <div class="card-body">
-          <h5 class="card-title">فيلم 16</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title">Taxi Driver</h5>
+          <p class="card-text">Travis, an ex-marine and Vietnam veteran, works as a taxi driver in New York City. One day, he decides to save an underage prostitute from her pimp in an effort to clean the city of its corruption.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐ 8/10</p>
+          <p class="timing">time:114 M</p>
+           <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
-    <!-- بطاقة الفيلم 17 -->
+     <!-- بطاقة الفيلم 17 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/5843916117540719105_109.jpg" alt="فيلم 16">
+        <img src="photo_17_2025-05-13_15-52-07.jpg" alt="فيلم 17">
         <div class="card-body">
-          <h5 class="card-title">فيلم 16</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title">The Dark Knight</h5>
+          <p class="card-text">Batman has a new foe, the Joker, who is an accomplished criminal hell-bent on decimating Gotham City. Together with Gordon and Harvey Dent, Batman struggles to thwart the Joker before it is too late.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐⭐ 9/10</p>
+          <p class="timing">time:152 M</p>
+           <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
   </div>
 </div>
+<script>
+  function goToFavorites() {
+ 
+    window.location.href = 'favorits.html';
+  }
+</script>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
