--- a/series.html
+++ b/series.html
@@ -48,7 +48,7 @@
         <li class="nav-item"><a class="nav-link" href="main.html">الرئيسية</a></li>
         <li class="nav-item"><a class="nav-link active" href="movies.html">الأفلام</a></li>
         <li class="nav-item"><a class="nav-link" href="series.html">المسلسلات</a></li>
-        <li class="nav-item"><a class="nav-link" href="favorites.html">المفضلة</a></li>
+        <li class="nav-item"><a class="nav-link" href="favorits.html">المفضلة</a></li>
         <li class="nav-item"><a class="nav-link" href="login.html">تسجيل الدخول</a></li>
           <li class="nav-item"><a class="nav-link" href="signup.html">انشاء حساب</a></li>
       </ul>
@@ -58,214 +58,239 @@
 
 <!-- series Cards Grid -->
 <div class="container py-5">
-  <h2 class="text-center mb-4">Movies</h2>
+  <h2 class="text-center mb-4">series</h2>
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
     <!-- بطاقة المسلسل 1 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_1_2025-05-13_12-49-06.jpg"width="200px"  height="300px" alt="مسلسل 1">
+        <img src="photo_1_2025-05-13_12-49-06.jpg"width="200px"  height="300px" alt="مسلسل 1">
         <div class="card-body">
-          <h5 class="card-title">فيلم 1</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <h5 class="card-title">Vis A Vis </h5>
+          <p class="card-text">Macarena's life goes for a toss when she is convicted to go to prison. She is fragile and innocent and struggles to survive and co-exist with the inmates who are both unwelcoming and revengeful.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐ 8/10</p>
+          <p class="seasons">4 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة المسلسل 2 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_2_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 2">
+        <img src="photo_2_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 2">
         <div class="card-body">
-          <h5 class="card-title">فيلم 2</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
-        </div>
-      </div>
-    </div>
-    <!-- بطاقة المسلسل 3 -->
-    <div class="col">
-      <div class="movie-card">
-        <img src="images/photo_3_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 3">
-        <div class="card-body">
-          <h5 class="card-title">فيلم 3</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <h5 class="card-title">The Walking Dead </h5>
+          <p class="card-text">In the wake of a zombie apocalypse, various survivors struggle to stay alive. As they search for safety and evade the undead, they are forced to grapple with rival groups and difficult choices. </p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐ 8/10</p>
+          <p class="seasons">11 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة المسلسل 4 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_4_2025-05-13_12-49-06.jpg" width="200px" height="300px" alt="مسلسل 4">
+        <img src="photo_4_2025-05-13_12-49-06.jpg" width="200px" height="300px" alt="مسلسل 4">
         <div class="card-body">
-          <h5 class="card-title">فيلم 4</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title"> Squid Game </h5>
+          <p class="card-text">The first season of the South Korean dystopian survival thriller horror television series Squid Game was created for television by Korean writer and television producer Hwang Dong-hyuk. It was released on Netflix on September 17, 2021 </p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐⭐ 9/10</p>
+          <p class="seasons">2 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة المسلسل 5 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_5_2025-05-13_12-49-06.jpg" width="200px" height="300px" alt="مسلسل 5">
+        <img src="photo_5_2025-05-13_12-49-06.jpg" width="200px" height="300px" alt="مسلسل 5">
         <div class="card-body">
-          <h5 class="card-title">فيلم 5</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <h5 class="card-title">Better Call Saul </h5>
+          <p class="card-text">Ex-con artist Jimmy McGill turns into a small-time attorney and goes through a series of trials and tragedies, as he transforms into his alter ego Saul Goodman, a morally challenged criminal lawyer </p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐⭐ 9/10</p>
+          <p class="seasons">6 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة المسلسل 6 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_6_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 6">
+        <img src="photo_6_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 6">
         <div class="card-body">
-          <h5 class="card-title">فيلم 6</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title"> Mr. Robot</h5>
+          <p class="card-text"> Elliot, a cyber-security engineer suffering from anxiety, works for a corporation and hacks felons by night. Panic strikes him after Mr Robot, a cryptic anarchist, recruits him to ruin his company.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐ 8/10</p>
+          <p class="seasons">4 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة المسلسل 7 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_7_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 7">
+        <img src="photo_7_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 7">
         <div class="card-body">
-          <h5 class="card-title">فيلم 7</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <h5 class="card-title">Prison Break </h5>
+          <p class="card-text"> An engineer installs himself in a prison he helped design, in order to save his falsely accused brother from a death sentence.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐ 8/10</p>
+          <p class="seasons">5 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة المسلسل 8 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_8_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 8">
+        <img src="photo_8_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 8">
         <div class="card-body">
-          <h5 class="card-title">فيلم 8</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title">Money Heist </h5>
+          <p class="card-text">When the national mint and a touring school group are held hostage by robbers, police believe that the thieves have no way out. Little do they know that the thieves have a bigger plan in store. </p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐ 8/10</p>
+          <p class="seasons">5 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة المسلسل 9 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_9_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 9">
+        <img src="photo_9_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 9">
         <div class="card-body">
-          <h5 class="card-title">فيلم 9</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <h5 class="card-title"> Peaky Blinders</h5>
+          <p class="card-text"> Tommy Shelby, a dangerous man, leads the Peaky Blinders, a gang based in Birmingham. Soon, Chester Campbell, an inspector, decides to nab him and put an end to the criminal activities.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐ 8/10</p>
+          <p class="seasons">6 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة المسلسل 10 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_10_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 10">
+        <img src="photo_10_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 10">
         <div class="card-body">
-          <h5 class="card-title">فيلم 10</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title"> The Sopranos</h5>
+          <p class="card-text"> Tony Soprano, an Italian-American mafia head based in New Jersey, struggles to manage his family and criminal life and confides his affairs to his psychiatrist Jennifer Melfi.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐⭐ 9/10</p>
+          <p class="seasons">6 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة المسلسل 11 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_11_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 11">
+        <img src="photo_11_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 11">
         <div class="card-body">
-          <h5 class="card-title">فيلم 11</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <h5 class="card-title"> Supernatural</h5>
+          <p class="card-text"> When a woman mysteriously dies due to a supernatural event, her husband and her sons set out on a mission to find out the truth, while battling various paranormal beings.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐ 8/10</p>
+          <p class="seasons">15 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة المسلسل 12 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_12_2025-05-13_12-49-06.jpg"width="200px"  height="300px"alt="مسلسل 12">
+        <img src="photo_12_2025-05-13_12-49-06.jpg"width="200px"  height="300px"alt="مسلسل 12">
         <div class="card-body">
-          <h5 class="card-title">فيلم 12</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title"> Dexter</h5>
+          <p class="card-text"> Dexter Morgan, a man with homicidal tendencies, lives a double life. He works as a forensic technician for the police department during the day and kills heinous perpetrators in his free time.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐ 8/10</p>
+          <p class="seasons">8 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة المسلسل 13 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_13_2025-05-13_12-49-06.jpg" width="200px" height="300px"alt="مسلسل 13">
+        <img src="photo_13_2025-05-13_12-49-06.jpg" width="200px" height="300px"alt="مسلسل 13">
         <div class="card-body">
-          <h5 class="card-title">فيلم 13</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <h5 class="card-title"> The Newsroom</h5>
+          <p class="card-text"> At the Atlantis Cable News Channel, news anchor Will McAvoy is forced to collaborate with new colleagues after his previous team quits. They struggle to work together and produce quality content.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐ 8/10</p>
+          <p class="seasons">3 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة المسلسل 14 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_14_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 14">
+        <img src="photo_14_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 14">
         <div class="card-body">
-          <h5 class="card-title">فيلم 14</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title"> Friends</h5>
+          <p class="card-text"> Follow the lives of six reckless adults living in Manhattan, as they indulge in adventures which make their lives both troublesome and happening.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐⭐ 9/10</p>
+          <p class="seasons">10 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة المسلسل 15 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_15_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 15">
+        <img src="photo_15_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 15">
         <div class="card-body">
-          <h5 class="card-title">فيلم 15</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐⭐</p>
+          <h5 class="card-title"> Spartacus</h5>
+          <p class="card-text"> Spartacus, a brave Thracian warrior, becomes a gladiator who leads an uprising against the brutal slave owners. He must also find his wife, Sura, who has been condemned to slavery.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐ 8/10 </p>
+          <p class="seasons">3 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
     <!-- بطاقة المسلسل 16 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_16_2025-05-13_12-49-06.jpg" width="200px" height="300px" alt="مسلسل 16">
+        <img src="photo_16_2025-05-13_12-49-06.jpg" width="200px" height="300px" alt="مسلسل 16">
         <div class="card-body">
-          <h5 class="card-title">فيلم 16</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title"> Game of Thrones</h5>
+          <p class="card-text"> Nine noble families wage war against each other in order to gain control over the mythical land of Westeros. Meanwhile, a force is rising after millenniums and threatens the existence of living men.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐⭐ 9/10 </p>
+          <p class="seasons">8 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
-    <!-- بطاقة المسلسل 17 -->
+     <!-- بطاقة المسلسل 17 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_17_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 17">
+        <img src="photo_17_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 17">
         <div class="card-body">
-          <h5 class="card-title">فيلم 16</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title"> Breaking Bad</h5>
+          <p class="card-text">Walter White, a chemistry teacher, discovers that he has cancer and decides to get into the meth-making business to repay his medical debts. His priorities begin to change when he partners with Jesse </p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐⭐ 9/10</p>
+          <p class="seasons">5 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
       <!-- بطاقة المسلسل 18 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_18_2025-05-13_12-49-06.jpg" width="200px" height="300px" alt="مسلسل 18">
+        <img src="photo_18_2025-05-13_12-49-06.jpg" width="200px" height="300px" alt="مسلسل 18">
         <div class="card-body">
-          <h5 class="card-title">فيلم 16</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title"> House of the Dragon</h5>
+          <p class="card-text"> After the death of their father, two siblings fight for the throne, thereby causing a civil war known as the Dance of the Dragons.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐ 8/10</p>
+          <p class="seasons">2 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
       <!-- بطاقة المسلسل 19 -->
     <div class="col">
       <div class="movie-card">
-        <img src="images/photo_19_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 19">
+        <img src="photo_19_2025-05-13_12-49-06.jpg"width="200px" height="300px" alt="مسلسل 19">
         <div class="card-body">
-          <h5 class="card-title">فيلم 16</h5>
-          <p class="card-text">الوصف هنا</p>
-          <p class="rating">⭐⭐⭐⭐</p>
+          <h5 class="card-title"> Black Mirror</h5>
+          <p class="card-text"> In an abstrusely dystopian future, several individuals grapple with the manipulative effects of cutting edge technology in their personal lives and behaviours.</p>
+          <p class="rating">⭐⭐⭐⭐⭐⭐⭐⭐ 8/10</p>
+          <p class="seasons">7 season</p>
+          <button class="favorite-btn">♥</button>
         </div>
       </div>
     </div>
