--- a/favorits.html
+++ b/favorits.html
@@ -1,52 +1,76 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>المفضلة</title>
-    <style>
-        body {
-            background-color: #141414;
-            color: white;
-            font-family: Arial, sans-serif;
-        }
-        .header {
-            background-color: #e50914;
-            padding: 20px;
-            text-align: center;
-            font-size: 2em;
-        }
-        .favorites-list {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            margin-top: 20px;
-        }
-        .favorite-item {
-            background-color: #333;
-            border-radius: 10px;
-            padding: 10px;
-            margin: 10px;
-            width: 150px;
-            text-align: center;
-            color: #e50914;
-            cursor: pointer;
-        }
-        .favorite-item:hover {
-            background-color: #e50914;
-            color: white;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>المفضلة</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" rel="stylesheet" integrity="sha384-..." crossorigin="anonymous">
+
+  <style>
+    body {
+      background-color: #141414;
+      color: white;
+      font-family: Arial, sans-serif;
+      padding-top: 70px; /* Space for fixed navbar */
+    }
+    .favorites-list {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      margin-top: 20px;
+    }
+    .favorite-item {
+      background-color: #333;
+      border-radius: 10px;
+      padding: 10px;
+      margin: 10px;
+      width: 150px;
+      text-align: center;
+      color: #e50914;
+      cursor: pointer;
+    }
+    .favorite-item:hover {
+      background-color: #e50914;
+      color: white;
+    }
+  </style>
 </head>
 <body>
-    <div class="header">
-        المفضلة
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand text-danger" href="#">الموقع</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="main.html">الرئيسية</a></li>
+          <li class="nav-item"><a class="nav-link" href="movies.html">الأفلام</a></li>
+          <li class="nav-item"><a class="nav-link" href="series.html">المسلسلات</a></li>
+          <li class="nav-item"><a class="nav-link" href="favorits.html">المفضلة</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">تسجيل الدخول</a></li>
+          <li class="nav-item"><a class="nav-link" href="signup.html">انشاء حساب</a></li>
+        </ul>
+      </div>
     </div>
+  </nav>
+
+  <!-- Page Content -->
+  <div class="container">
+    <h1 class="text-center text-danger mb-4">المفضلة</h1>
     <div class="favorites-list">
-        <div class="favorite-item">فيلم 1</div>
-        <div class="favorite-item">فيلم 2</div>
-        <div class="favorite-item">فيلم 3</div>
-        <div class="favorite-item">فيلم 4</div>
+      <div class="favorite-item">فيلم 1</div>
+      <div class="favorite-item">فيلم 2</div>
+      <div class="favorite-item">فيلم 3</div>
+      <div class="favorite-item">فيلم 4</div>
     </div>
+  </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
 </body>
 </html>
