--- a/main.html
+++ b/main.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>موقع تقييم الأفلام</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
       background-color: #121212;
@@ -21,12 +21,12 @@
 
     .search-section {
       background: rgba(0, 0, 0, 0.8);
-      padding: 50px 20px;
+      padding: 30px 20px;
       text-align: center;
     }
 
     .search-section h4 {
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
 
     .btn-custom {
@@ -47,6 +47,36 @@
       font-weight: bold;
       font-size: 1.3rem;
     }
+
+    .scroll-container {
+      overflow: hidden;
+      white-space: nowrap;
+      position: relative;
+      margin-top: 30px;
+    }
+
+    .scroll-track {
+      display: inline-flex;
+      animation: scroll-left 30s linear infinite;
+    }
+
+    .card {
+      flex: 0 0 auto;
+      width: 200px;
+      margin: 10px;
+      background-color: #1e1e1e;
+      border: none;
+    }
+
+    .card img {
+      height: 150px;
+      object-fit: cover;
+    }
+
+    @keyframes scroll-left {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-50%); }
+    }
   </style>
 </head>
 <body>
@@ -64,17 +94,14 @@
           <li class="nav-item"><a class="nav-link" href="movies.html">الأفلام</a></li>
           <li class="nav-item"><a class="nav-link" href="series.html">المسلسلات</a></li>
           <li class="nav-item"><a class="nav-link" href="favorits.html">المفضلة</a></li>
-          <li class="nav-item"><a class="nav-link" href="login.php">تسجيل الدخول</a></li>
-          <li class="nav-item"><a class="nav-link" href="signup.php">إنشاء حساب</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">تسجيل الدخول</a></li>
+          <li class="nav-item"><a class="nav-link" href="signup.html">إنشاء حساب</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Image Header -->
-  <img src="images/cinema-background.jpg" alt="صورة سينما" class="header-image">
-
-  <!-- Search Section -->
+  <!-- Search Section (moved up) -->
   <div class="search-section">
     <h4>ابحث عن فيلم أو مسلسل</h4>
     <form onsubmit="handleSearch(event)">
@@ -85,19 +112,69 @@
     </form>
   </div>
 
+ 
+
+  <!-- Horizontal Scroll Section -->
+  <div class="scroll-container">
+    <div class="scroll-track">
+      <div class="card">
+        <img src="photo_1_2025-05-13_12-49-06.jpg" class="card-img-top" alt=" Vis A Vis">
+        <div class="card-body">
+          <h6 class="card-title text-white text-center"> Vis A Vis</h6>
+        </div>
+      </div>
+      <div class="card">
+        <img src="photo_4_2025-05-13_12-49-06.jpg" class="card-img-top" alt=" Squid Game">
+        <div class="card-body">
+          <h6 class="card-title text-white text-center"> Squid Game</h6>
+        </div>
+      </div>
+      <div class="card">
+        <img src="photo_13_2025-05-13_15-52-07.jpg" class="card-img-top" alt=" Fury">
+        <div class="card-body">
+          <h6 class="photo_6_2025-05-13_15-52-07.jpg"> Fury</h6>
+        </div>
+      </div>
+      <div class="card">
+        <img src="photo_9_2025-05-13_12-49-06.jpg" class="card-img-top" alt=" Peaky Blinders">
+        <div class="card-body">
+          <h6 class="card-title text-white text-center"> Peaky Blinders</h6>
+        </div>
+      </div>
+      <div class="card">
+        <img src="photo_10_2025-05-13_15-52-07.jpg" class="card-img-top" alt=" Million Dollar Baby">
+        <div class="card-body">
+          <h6 class="card-title text-white text-center"> Million Dollar Baby</h6>
+        </div>
+      </div>
+      <div class="card">
+        <img src="photo_2_2025-05-13_15-52-07.jpg" class="card-img-top" alt=" The Matrix">
+        <div class="card-body">
+          <h6 class="card-title text-white text-center"> The Matrix</h6>
+        </div>
+      </div>
+      <div class="card">
+        <img src="photo_12_2025-05-13_12-49-06.jpg" class="card-img-top" alt=" Dexter">
+        <div class="card-body">
+          <h6 class="card-title text-white text-center">Dexter </h6>
+        </div>
+      </div>
+     
+    </div>
+  </div>
+
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    function handleSearch(event)
-{
-  event.preventDefault();
-  const query = document.getElementById('searchInput').value.trim();
-  if (query) {
-    window.location.href = "search-results.html?q=${encodeURIComponent(query)}";
-  } else {
-    alert("يرجى إدخال اسم الفيلم أو المسلسل.");
-  }
-}
+    function handleSearch(event) {
+      event.preventDefault();
+      const query = document.getElementById('searchInput').value.trim();
+      if (query) {
+        document.getElementById("searchTerm").textContent = term;
+      } else {
+        alert("يرجى إدخال اسم الفيلم أو المسلسل.");
+      }
+    }
   </script>
 </body>
 </html>
